--- a/Developer/ProgrammingGuide/paper.tex
+++ b/Developer/ProgrammingGuide/paper.tex
@@ -24,7 +24,7 @@
   \end{figure}
   \vspace{1cm}
 %  \textbf{RELEASE CANDIDATE}\\[\medskipamount]
-  Version 1.3.6 for Equalizer 0.5.3+svn\\[\medskipamount]
+  Version 1.3.7 for Equalizer 0.5.4+svn\\[\medskipamount]
   \today
 }
 
@@ -116,6 +116,7 @@ recomposition\footnote{Data set courtesy of Stanford University Computer
     1.3.4   & July 3, 2008 & Update \sref{sStatistics}\\
     1.3.5   & July 7, 2008 & Update after namespace naming cleanup\\
     1.3.6   & July 20, 2008 & Add accum and samples to \aref{aFileFormat}, add \sref{sDrawableConfig}\\
+    1.3.7   & Aug 22, 2008 & Update \sref{sEqplyWIndow} with OSWindow changes (event handling updates still missing)\\
     \hline
   \end{tabularx}}
 \thispagestyle{empty}
@@ -548,12 +549,13 @@ system thread.
 
 \subsubsection{Window}
 
-The \textsf{eq::Window} class holds a drawable and an OpenGL
+The \textsf{eq::Window} class encapsulates a drawable and an OpenGL
 context. The drawable can be an on-screen window or an off-screen
-PBuffer. Framebuffer object (FBO) support will be implement by later
-version of Equalizer. The window holds window-system-specific handles to
-the drawable and context, e.g., an X11 window \textsf{XID} and
-\textsf{GLXContext} for the glX window system.
+PBuffer. Framebuffer object (FBO) support will be implement by a later
+version of Equalizer. The window uses an \textsf{eq::OSWindow}, which
+abstracts and manages window-system-specific handles to the drawable and
+context, e.g., an X11 window \textsf{XID} and \textsf{GLXContext} for
+the glX window system.
 
 \subsubsection{Channel}
 
@@ -1700,9 +1702,9 @@ void Pipe::frameStart( const uint32_t frameID, const uint32_t frameNumber )
 \end{lstlisting}}
 
 
-\subsection{Window}
+\subsection{\label{sEqplyWIndow}Window}
 
-The Equalizer window holds an OpenGL drawable and a rendering
+The Equalizer window abstracts an OpenGL drawable and a rendering
 context. When using the default window initialization functions, all
 windows of a pipe share the OpenGL context. This allows reuse of OpenGL
 objects such as display lists and textures between all windows of one
@@ -1711,37 +1713,58 @@ pipe.
 The window class is the natural place for the application to maintain
 all data specific to the OpenGL context.
 
+\subsubsection{Window System Interface}
+
+The particulars of creating a window and OpenGL context depend on the
+window system used. One can either use the implementation provided by
+the operating system, e.g., AGL, WGL or glX, or some higher-level
+toolkit, e.g., Qt.
+
+\begin{wrapfigure}{r}{.618\textwidth}
+  \includegraphics[width=.618\textwidth]{images/osWindow.pdf}
+  {\caption{\small\label{fOSWindow}eq::OSWindow UML class hierarchy}}
+\end{wrapfigure}
+All window-system specific functionality is implemented by a
+specialization of \textsf{eq::OS\-Window}. The \textsf{OSWindow} class
+defines the minimal interface to be implemented for a new window
+system. Each \textsf{Window} uses one \textsf{OSWindow} during
+execution. This separation allows an easy implementation and adaption to
+another window system or application.
+
+Equalizer provides a generic interface and implementation for the three
+most common window systems: AGL, WGL and glX. The interfaces define the
+minimal functionality needed to reuse other window system specific
+classes, for example the AGL, WGL and glX event handlers. The
+implementation derived from these interfaces provides a sample
+implementation which honors all configurable window attributes.
+
 \subsubsection{Initialization and Exit}
 
 The initialization sequence uses multiple, overrideable task
-methods. The main task method \textsf{configInit} executes a `child'
-task method to create the drawable and context. The child task method
-depends on the window system of the pipe. The default implementations of
-\textsf{configInitGLX}, \textsf{configInitWGL} or \textsf{configInitAGL}
-create an on-screen window using OS-specific methods. If the OpenGL
-drawable and context were created successfully, \textsf{configInit} calls
-\textsf{configInitGL}, which performs the generic OpenGL
-state initialization. The default implementation sets up some typical
-OpenGL state, e.g., it enables the depth test.
+methods. The main task method \textsf{configInit} calls first
+\textsf{configInitOSWindow}, which creates and initializes the
+\textsf{OSWindow} for this window. The \textsf{OSWindow} initialization
+code is implementation specific. If the \textsf{OSWindow} was
+initialized successfully, \textsf{configInit} calls
+\textsf{configInitGL}, which performs the generic OpenGL state
+initialization. The default implementation sets up some typical OpenGL
+state, e.g., it enables the depth test.
 
-\fig{fWindowInit} shows a flow chart of the window initialization. The
-colored functions are task methods and can be replaced by
-application-specific implementations.
-
-The window-system specific initialization takes into account various
+The \textsf{OSWindow} initialization takes into account various
 attributes set in the configuration file. Attributes include the size of
-the various frame buffer planes  (color, alpha, depth, stencil) as well
+the various frame buffer planes (color, alpha, depth, stencil) as well
 as other framebuffer attributes, such as quad-buffered stereo,
 doublebuffering, fullscreen mode and window decorations. Some of the
 attributes, such as stereo, doublebuffer and stencil can be set to
-\textsf{eq::AUTO}, in which case Equalizer will test for their availability and 
-enable them if possible.
+\textsf{eq::AUTO}, in which case the Equalizer default implementation
+will test for their availability and enable them if possible.
 
 For the window-system specific initialization, \textsf{eqPly} uses the
-default Equalizer implemenation. The \textsf{eqPly} window
+default Equalizer implementation. The \textsf{eqPly} window
 initialization only overrides the OpenGL-specific initialization
-function in order to initialize a state object and an overlay logo. This
-function is only called if an OpenGL context was created and made current:
+function \textsf{configInitGL} in order to initialize a state object and
+an overlay logo. This function is only called if an OpenGL context was
+created and made current:
 
 {\footnotesize\begin{lstlisting}
 bool Window::configInitGL( const uint32_t initID )
@@ -1749,96 +1772,54 @@ bool Window::configInitGL( const uint32_t initID )
     if( !eq::Window::configInitGL( initID ))
         return false;
 
-    eq::Pipe*  pipe        = getPipe();
-    Window*    firstWindow = static_cast< Window* >( pipe->getWindows()[0] );
+    glLightModeli( GL_LIGHT_MODEL_LOCAL_VIEWER, 1 );
+    glEnable( GL_CULL_FACE ); // OPT - produces sparser images in DB mode
+    glCullFace( GL_BACK );
 
     EQASSERT( !_state );
+    _state = new VertexBufferState( getObjectManager( ));
+    _loadLogo();
 
-    if( firstWindow == this )
-    {
-        _state = new VertexBufferState( glewGetContext( ));
-
-        const Config*   config   = static_cast< const Config* >( getConfig( ));
-        const InitData& initData = config->getInitData();
-
-        if( initData.useVBOs() )
-        {
-            // Check if VBO funcs available, else leave DISPLAY_LIST_MODE on
-            if( GLEW_VERSION_1_5 )
-            {
-                _state->setRenderMode( mesh::BUFFER_OBJECT_MODE );
-                EQINFO << "VBO rendering enabled" << endl;
-            }
-            else
-                EQWARN << "VBO function pointers missing, using display lists" 
-                       << endl;
-        }
-        
-        if( initData.useGLSL() )
-        {
-            // Check if all functions are available
-            if( GLEW_VERSION_2_0 )
-            {
-                EQINFO << "Shaders supported, attempting to load" << endl;
-                _loadShaders();
-            }
-            else
-                EQWARN << "Shader function pointers missing, using fixed "
-                       << "pipeline" << endl;
-        }
-
-        _loadLogo();
-    }
-    else
-    {
-        _state       = firstWindow->_state;
-        _logoTexture = firstWindow->_logoTexture;
-        _logoSize    = firstWindow->_logoSize;
-    }
-
-    if( !_state ) // happens if first window failed to initialize
-    {
-        setErrorMessage( "No state handler object" );
-        return false;
-    }
-
-    // turn off OpenGL lighting if we are using our own shaders
-    if( _state->getProgram( pipe ) != VertexBufferState::FAILED )
-        glDisable( GL_LIGHTING );
+    const Config*   config   = static_cast< const Config* >( getConfig( ));
+    const InitData& initData = config->getInitData();
+    if( initData.useGLSL() )
+        _loadShaders();
 
     return true;
 }
 \end{lstlisting}}%>>
 
-\begin{wrapfigure}{r}{.618\textwidth}
-  \includegraphics[width=.618\textwidth]{images/windowInit.pdf}
-  {\caption{\small\label{fWindowInit}Window Initialization}}
-\end{wrapfigure}
 The state object is used to handle the creation of OpenGL objects in a
-multipipe, multi-threaded execution environment. It uses an object
-manager, which is described in detail in \sref{sObjectManager}. It is
-used in conjunction with a reference-counting smart-pointer here, since it is
-potentially `owned' by multiple windows at the same time.
+multipipe, multi-threaded execution environment. It uses the object
+manager of the \textsf{eq::Window}, which is described in detail in
+\sref{sObjectManager}.
 
 The logo texture is loaded from the file system and bound to a texture
 ID used later by the channel for rendering. A code listing is ommitted,
 since the code consists of standard OpenGL calls and is not
 Equalizer-specific.
 
-The window exit function de-allocates all OpenGL objects when the state
-object is about to be disposed. The object manager does not delete the
-object in its destructor, since it does not know if an OpenGL context is
-still current. Additionally, \textsf{eq::Window::configExit} is called
-to destroy the drawable and context:
+The window exit happens in the reverse order of the
+initialization. First, \textsf{configExitGL} is called to de-initialize
+OpenGL, followed by \textsf{configExitOSWindow} which de-initializes the
+drawable and context and deletes the \textsf{OSWindow} allocated in
+\textsf{configInitOSWindow}.
+
+The window OpenGL exit function of \textsf{eqPly} de-allocates all
+OpenGL objects. The object manager does not delete the object in its
+destructor, since it does not know if an OpenGL context is still
+current.
 
 {\footnotesize\begin{lstlisting}
-bool Window::configExit()
+bool Window::configExitGL()
 {
-    if( _state.isValid() && _state->getRefCount() == 1 )
+    if( _state )
         _state->deleteAll();
 
+    delete _state;
     _state = 0;
-    return eq::Window::configExit();
+
+    return eq::Window::configExitGL();
 }
 \end{lstlisting}}
 
@@ -2119,6 +2100,10 @@ void Channel::_drawModel( const Model* model )
         
 \end{lstlisting}}
 
+\begin{wrapfigure}{r}{.618\textwidth}
+  \includegraphics[width=.618\textwidth]{images/render.pdf}
+  {\caption{\small\label{fRender}Main Render Loop}}
+\end{wrapfigure}
 The model data is spatially organized in an 3-dimensional
 kD-tree\footnote{See also \link{http://en.wikipedia.org/wiki/Kd-tree}}
 for efficient view frustum culling. When the model is loaded by
@@ -2128,10 +2113,6 @@ has the range [0, 1], its left child [0, 0.5] and its right child [0.5,
 1], and so on for all nodes in the tree. The preprocessed model is saved
 in a binary format for accelerating subsequent use.
 
-\begin{wrapfigure}{r}{.618\textwidth}
-  \includegraphics[width=.618\textwidth]{images/render.pdf}
-  {\caption{\small\label{fRender}Main Render Loop}}
-\end{wrapfigure}
 The rendering loop maintains a list of candidates to render, which
 initially contains the root node. Each candidate of this list is tested
 for full visiblity against the frustum and range, and rendered if
@@ -2423,6 +2404,10 @@ process and executes the \textsf{main} function. The application and
 render clients initialize the local node for communications with other
 nodes, including the server, using \textsf{Client::initLocal}.
 
+\begin{wrapfigure}{r}{.618\textwidth}
+  \includegraphics[width=.618\textwidth]{images/threads.pdf}
+  {\caption{\small\label{fThreads}Threads within one node process}}
+\end{wrapfigure}
 During this initialization, Equalizer creates and manages two threads
 for communication, the receiver thread and the command thread. Normally
 no application code is executed from these two threads.
@@ -2431,10 +2416,6 @@ The receiver thread manages the network connections to other nodes and
 receives data. It dispatches the received data either to the application
 threads, or to the command thread.
 
-\begin{wrapfigure}{r}{.618\textwidth}
-  \includegraphics[width=.618\textwidth]{images/threads.pdf}
-  {\caption{\small\label{fThreads}Threads within one node process}}
-\end{wrapfigure}
 The command thread processes Equalizer-related request from other nodes,
 for example during \textsf{eq::net::Object} mapping. In some special cases
 the command thread executes application code, for example when a remote
@@ -2478,10 +2459,6 @@ e.g., \textsf{Window::startFrame}, are currently empty since the
 synchronization is implicit due to the sequential execution within the
 thread.
 
-\begin{wrapfigure}{r}{.618\textwidth}
-  \includegraphics[width=.618\textwidth]{images/frameSync.pdf}
-  {\caption{\small\label{fFrameSync}Per-Node Frame Synchronization}}
-\end{wrapfigure}
 Each entity uses \textsf{waitFrame\-Started} to block on the parent's
 \textsf{startFrame}, e.g., \textsf{Pipe::\-frame\-Start} calls
 \textsf{Node::wait\-Frame\-Started} to wait for the corresponding
@@ -2506,6 +2483,10 @@ current frame, and \textsf{Node::frameDrawFinish} calls
 \textsf{Pipe::waitFrameLocal} for each of its pipes to block the node
 thread until the current frame has been drawn. 
 
+\begin{wrapfigure}{r}{.618\textwidth}
+  \includegraphics[width=.618\textwidth]{images/frameSync.pdf}
+  {\caption{\small\label{fFrameSync}Per-Node Frame Synchronization}}
+\end{wrapfigure}
 \fig{fFrameSync} illustrates the local frame synchronization. By
 removing the calls to \textsf{waitFrameLocal}, the node thread can
 disable the synchronization with the pipe threads, which causes the node
@@ -2603,8 +2584,7 @@ detail the handling on the different window systems. The entry point for
 the window initialization is the task method
 \textsf{Window::configInit}. This task method first calls a
 window-system-specific task method, and then
-\textsf{Window::configInitGL} to do generic OpenGL state setup, as shown
-in \fig{fWindowInit}.
+\textsf{Window::configInitGL} to do generic OpenGL state setup.
 
 Since window initialization is notoriously error-prone and hard to
 debug, the default Equalizer functions propagate the reason for errors
@@ -2882,10 +2862,6 @@ in the system. Direct send distributes this workload evenly across all
 source channels, and thereby keeps the compositing work per channel
 constant.
 
-\begin{wrapfigure}{r}{.618\textwidth}
-  \includegraphics[width=.618\textwidth]{images/directSend.pdf}
-  {\caption{\small\label{fDirectSend}Parallel Direct Send Compositing}}
-\end{wrapfigure}
 In direct send compositing, each rendering channel is also responsible
 for the sort-last composition of one screen-space tile. He receives
 the framebuffer pixels for his tile from all the other channels. The
@@ -2897,6 +2873,10 @@ transferred to the destination channel, similarly to a 2D (sort-first)
 compound. The amount of pixel data for this part of the compositing
 pipeline also approaches a constant value, i.e., the full frame buffer.
 
+\begin{wrapfigure}{r}{.618\textwidth}
+  \includegraphics[width=.618\textwidth]{images/directSend.pdf}
+  {\caption{\small\label{fDirectSend}Parallel Direct Send Compositing}}
+\end{wrapfigure}
 \fig{fDirectSend} illustrates this algorithm for three channels. The
 Equalizer website contains a
 presentation\footnote{\link{http://www.equalizergraphics.com/documents/EGPGV07.pdf}}
@@ -2938,10 +2918,6 @@ frame's compound. The range can be used to compute the assembly order of
 multiple input frames, e.g., for sorted-blend compositing in volume
 rendering applications.
 
-\begin{wrapfigure}{r}{.618\textwidth}
-  \includegraphics[width=.618\textwidth]{images/assembly.pdf}
-  {\caption{\small\label{fAssembly}Hierarchy of assembly classes}}
-\end{wrapfigure}
 Readback and assemble operations on frames and images are designed to be
 asynchronous. They have a start and finish method for both readback and
 assemble to allow the initiation and synchronization of the operation.
@@ -2950,6 +2926,10 @@ Currently, only synchronous readback and assembly using
 respective start method of the image. Later versions of Equalizer will
 implement asynchronous pixel transfers.
 
+\begin{wrapfigure}{r}{.618\textwidth}
+  \includegraphics[width=.618\textwidth]{images/assembly.pdf}
+  {\caption{\small\label{fAssembly}Hierarchy of assembly classes}}
+\end{wrapfigure}
 The offset of input and output frames characterizes the position of the
 frame data with respect to the framebuffer, that is, the
 \textbf{window's} lower-left corner. For output frames this is the
@@ -2999,10 +2979,6 @@ through the full texture. Therefore they have to be blen\-ded
 back-to-front in the same way as the slice planes are blended during
 rendering.
 
-\begin{wrapfigure}{r}{.382\textwidth}
-  \includegraphics[width=.382\textwidth]{images/volResult.png}
-  {\caption{\small\label{fVolResult}Result of \fig{fBlendPerspective}}}
-\end{wrapfigure}
 DB compounds have the advantage of scaling any part of the volume
 rendering pipeline: texture and main memory (smaller bricks for each
 channel), fill rate (less samples per channel) and IO bandwidth for
@@ -3036,6 +3012,10 @@ dimension. Therefore the range of the resulting frame buffer images,
 together with the sorting order, is used to arrange the frames during
 compositing. \fig{fBlendOrtho} shows this composition for one view.
 
+\begin{wrapfigure}{r}{.382\textwidth}
+  \includegraphics[width=.382\textwidth]{images/volResult.png}
+  {\caption{\small\label{fVolResult}Result of \fig{fBlendPerspective}}}
+\end{wrapfigure}
 Finding the correct assembly order for perspective frustra is more
 complex. The perspective distortion invalidates a simple orientation
 criteria like the one used for orthographic frustra. For the view and
